--- a/src/app/modules/topology/components/viewer/viewer.component.scss
+++ b/src/app/modules/topology/components/viewer/viewer.component.scss
@@ -2,3 +2,13 @@
 
 $columns-x-padding: 25px;
 
+#topoviewer {
+    background: rgb(138, 138, 132);
+    height:600px;
+    // height: 100%;
+    width: 100%;
+    position: relative;
+    left: 0;
+    top: 0;
+}
+
