--- a/src/app/modules/topology/components/viewer/viewer.component.html
+++ b/src/app/modules/topology/components/viewer/viewer.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
 
-    <div style="width:100%; height:600px;" id="container"> .</div>
+    <app-topologyviewer id="topoviewer" [chartName]="'topoviewer'" [legendEnabled]="false" [data]="topology">
+    </app-topologyviewer>
 </div>
