--- a/src/app/components/menu/desktop/menu.component.html
+++ b/src/app/components/menu/desktop/menu.component.html
@@ -31,4 +31,32 @@
             <span class="title">{{ 'layout.menu.signout' | translate }}</span>
         </div>
     </div>
+    <div id="footer" class="d-flex flex-column">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col d-flex flex-column justify-content-center align-items-center">
+                        
+                    <span class="tab-title">{{ 'layout.footer.version' | translate }} 0.1</span>
+                </div>
+    
+    
+                <div class="col d-flex flex-column justify-content-center align-items-center"
+                (click)="onOpenExternalLink('https://netgroup.github.io/rose/')">
+    
+                    <i class="mdi mdi-github"></i>
+                    <span class="tab-title">{{ 'layout.footer.github' | translate }}</span>
+                </div>
+    
+                <div class="col d-flex flex-column justify-content-center align-items-center"
+                (click)="onOpenExternalLink('http://rose-slack.netgroup.uniroma2.it:3000/')">
+    
+                    <i class="mdi mdi-slack"></i>
+                    <span class="tab-title">{{ 'layout.footer.slack' | translate }}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </div>
+
+
